# spelling-bee

./: README.md  pyproject.toml
spelling_bee/: bee.py  filter.py  node.py  score.py
spelling_bee/data/: words.txt
tests/: test_bee.py  test_filter.py  test_node.py
