[tool.poetry]
name = "spelling-bee"
version = "0.1.0"
description = "Spelling Bee library for analyzing puzzles"
authors = ["Chris Thrasher <chris@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^24.4.2"

[tool.poetry.scripts]
filter = "spelling_bee.filter:filter"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
